tests/baselines/reference/controlFlowWithIncompleteTypes.errors.txt
controlFlowWithIncompleteTypes.ts(24,19): error TS2339: Property 'slice' does not exist on type 'string | boolean'.
  Property 'slice' does not exist on type 'false'.


==== controlFlowWithIncompleteTypes.ts (1 errors) ====
    // Repro from #11000
    
    declare var cond: boolean;
    
    function foo1() {
        let x: string | number | boolean = 0;
        while (cond) {
            if (typeof x === "string") {
                x = x.slice();
            }
            else {
                x = "abc";
            }
        }
    }
    
    function foo2() {
        let x: string | number | boolean = 0;
        while (cond) {
            if (typeof x === "number") {
                x = "abc";
            }
            else {
                x = x.slice();
                      ~~~~~
!!! error TS2339: Property 'slice' does not exist on type 'string | boolean'.
!!! error TS2339:   Property 'slice' does not exist on type 'false'.
            }
        }
    }